--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <properties>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-    </properties>
+<!--    <properties>-->
+<!--        <failOnMissingWebXml>false</failOnMissingWebXml>-->
+<!--    </properties>-->
 
     <dependencies>
 
