--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-<!--    <properties>-->
-<!--        <failOnMissingWebXml>false</failOnMissingWebXml>-->
-<!--    </properties>-->
-
     <dependencies>
 
         <dependency>
@@ -174,7 +170,34 @@
             <type>pom</type>
         </dependency>
 
+        <!-- Tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.8.9</version>
+        </dependency>
     </dependencies>
+
+    <properties>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+        <sonar.language>java</sonar.language>
+        <sonar.coverage.exclusions>
+            **/unicorn/config/*,
+            **/unicorn/controller/*,
+            **/unicorn/entity/**,
+            **/unicorn/exception/*,
+            **/unicorn/dao/**,
+            **/unicorn/dto/*
+        </sonar.coverage.exclusions>
+    </properties>
 
     <build>
         <finalName>unicorn</finalName>
@@ -187,6 +210,28 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.4.0.905</version>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <configuration>
+                    <destFile>${sonar.jacoco.reportPath}</destFile>
+                    <append>true</append>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
